# GestionQuittances

./: README.md  pyproject.toml  quittances.db  requirements.txt  setup.py  specbook.md
gestion_quittances.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/interface/: cli.py  gui_launcher.py  quittances.db
src/models/: __init__.py  bailleur.py  database.py  locataire.py  quittance.py  quittance_pdf.py
src/utils/: db_viewer.py
tests/: __init__.py  test_bailleur.py  test_cli.py  test_database.py  test_locataire.py  test_quittance.py  test_quittance_pdf.py
