[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gestion-quittances"
version = "0.1"
description = "Application de génération de quittances de loyer"
authors = [
    {name = "Votre Nom", email = "votre.email@example.com"},
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.7",
    "reportlab>=4.1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
gestion-quittances = "src.interface.cli:cli"

[tool.setuptools]
packages = ["src"] 